<resources>
    <string name="app_name">Calculator</string>
    <string name="cancel">C</string>
    <string name="brackets">( )</string>
    <string name="num_8">8</string>
    <string name="num_9">9</string>
    <string name="num_7">7</string>
    <string name="num_6">6</string>
    <string name="num_5">5</string>
    <string name="num_4">4</string>
    <string name="num_3">3</string>
    <string name="num_2">2</string>
    <string name="num_1">1</string>
    <string name="num_0">0</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="multiply">*</string>
    <string name="divide">/</string>
    <string name="point">.</string>
    <string name="calculate">=</string>
    <string name="history">Історія</string>
    <string name="error_add_symbol">Помилка додавання символу</string>
    <string name="percent">%</string>
    <string name="error_expression">Некоректний формат виразу</string>
    <string name="clean">Очистити</string>
</resources>
