<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.MainActivity">

    <TextView
        android:id="@+id/textExpression"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:lines="3"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="32sp"
        tools:text="54+12*56-1+(12.3/45)" />

    <TextView
        android:id="@+id/textResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:textColor="@color/colorPrimary"
        android:textSize="32sp"
        tools:text="25454841" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp"
        android:columnCount="4">

        <Button
            android:id="@+id/btnShowHistory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="@string/history"
            android:textColor="@android:color/darker_gray"
            style="?android:attr/buttonBarButtonStyle"/>

        <ImageButton
            android:id="@+id/btnDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="3"
            android:layout_columnWeight="1"
            android:src="@android:drawable/ic_delete"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:text= "@string/cancel"
            android:textSize="32sp"
            android:textColor="@android:color/holo_red_dark"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/btnBrackets"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:text="@string/brackets"
            android:textSize="32sp"
            android:textColor="@android:color/black"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/btnPercent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:text="@string/percent"
            android:textSize="32sp"
            android:textColor="@android:color/black"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/btnDivide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:text="@string/divide"
            android:textSize="32sp"
            android:textColor="@android:color/holo_blue_dark"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/btn7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:text= "@string/num_7"
            android:textSize="32sp"
            android:textColor="@android:color/black"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/btn8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:text="@string/num_8"
            android:textSize="32sp"
            android:textColor="@android:color/black"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/btn9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:text="@string/num_9"
            android:textSize="32sp"
            android:textColor="@android:color/black"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/btnMultiply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:text="@string/multiply"
            android:textSize="32sp"
            android:textColor="@android:color/holo_blue_dark"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/btn4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:text= "@string/num_4"
            android:textSize="32sp"
            android:textColor="@android:color/black"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/btn5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:text="@string/num_5"
            android:textSize="32sp"
            android:textColor="@android:color/black"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/btn6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:text="@string/num_6"
            android:textSize="32sp"
            android:textColor="@android:color/black"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/btnMinus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:text="@string/minus"
            android:textSize="32sp"
            android:textColor="@android:color/holo_blue_dark"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/btn1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:text= "@string/num_1"
            android:textSize="32sp"
            android:textColor="@android:color/black"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/btn2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:text="@string/num_2"
            android:textSize="32sp"
            android:textColor="@android:color/black"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/btn3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:text="@string/num_3"
            android:textSize="32sp"
            android:textColor="@android:color/black"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/btnPlus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:text="@string/plus"
            android:textSize="32sp"
            android:textColor="@android:color/holo_blue_dark"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/btnSign"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:text= "+ -"
            android:textSize="32sp"
            android:textColor="@android:color/black"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/btn0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:text="@string/num_0"
            android:textSize="32sp"
            android:textColor="@android:color/black"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/btnPoint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:text="@string/point"
            android:textSize="32sp"
            android:textColor="@android:color/black"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/btnCalculate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:text="@string/calculate"
            android:textSize="32sp"
            android:textColor="@android:color/white"
            android:background="@android:color/holo_blue_dark"
            android:foreground="?android:attr/selectableItemBackground"
            style="?android:attr/buttonBarButtonStyle" />

    </GridLayout>
</LinearLayout>